# termide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTORING_GUIDE.md  SECURITY.md  build.rs  flake.nix
.cargo/: config.toml
.claude/: EDITOR_DECOMPOSITION_PLAN.md
.claude/skills/release-management/: SKILL.md
.claude/skills/rust-refactoring/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-event/: Cargo.toml
crates/app-event/src/: lib.rs
crates/app-modal/: Cargo.toml
crates/app-modal/src/: lib.rs
crates/app-panel/: Cargo.toml
crates/app-panel/src/: lib.rs
crates/app-session/: Cargo.toml
crates/app-session/src/: lib.rs
crates/app-watcher/: Cargo.toml
crates/app-watcher/src/: lib.rs
crates/app/src/: layout_session.rs  lib.rs  panel_ext.rs  state.rs
crates/app/src/app/: event_handler.rs  global_hotkeys.rs  key_handler.rs  menu_actions.rs  mod.rs  modal_handler.rs  mouse_handler.rs  panel_manager.rs  panel_operations.rs
crates/app/src/app/modal/: batch_handler.rs  confirm_handler.rs  input_handler.rs  mod.rs  select_handler.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: buffer.rs  cursor.rs  history.rs  lib.rs  search.rs  viewport.rs  wrap.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: constants.rs  lib.rs  settings.rs  xdg.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  event.rs  lib.rs  panel.rs
crates/git/: Cargo.toml
crates/git/src/: diff.rs  lib.rs  watcher.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/i18n/: en.toml  es.toml  hi.toml  ru.toml  th.toml
crates/i18n/src/: detect.rs  lib.rs  loader.rs  runtime.rs
crates/keyboard/: Cargo.toml
crates/keyboard/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: layout_manager.rs  lib.rs  panel_group.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/modal/: Cargo.toml
crates/modal/src/: base.rs  confirm.rs  conflict.rs  editable_select.rs  info.rs  input.rs  lib.rs  overwrite.rs  rename_pattern.rs  replace.rs  search.rs  select.rs
crates/panel-editor/: Cargo.toml
crates/panel-editor/src/: click_tracker.rs  clipboard.rs  config.rs  constants.rs  core.rs  file_io.rs  git.rs  keyboard.rs  lib.rs  search.rs  selection.rs  text_editing.rs  word_wrap.rs
crates/panel-editor/src/cursor/: jump.rs  mod.rs  physical.rs  visual.rs
crates/panel-editor/src/rendering/: context.rs  cursor_renderer.rs  deletion_markers.rs  highlight_renderer.rs  line_rendering.rs  mod.rs  wrap_rendering.rs
crates/panel-editor/src/state/: file_state.rs  git_integration.rs  input_state.rs  mod.rs  rendering_cache.rs  search_controller.rs
crates/panel-file-manager/: Cargo.toml
crates/panel-file-manager/src/: file_info.rs  lib.rs  navigation.rs  operations.rs  rendering.rs  selection.rs  utils.rs
crates/panel-misc/: Cargo.toml
crates/panel-misc/src/: debug.rs  lib.rs  welcome.rs
crates/panel-misc/src/log_viewer/: highlighting.rs  mod.rs
crates/panel-terminal/: Cargo.toml
crates/panel-terminal/src/: lib.rs  terminal_info.rs
crates/panel-terminal/src/terminal/: mod.rs  vt100_parser.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/system-monitor/: Cargo.toml
crates/system-monitor/src/: lib.rs
crates/text-search/: Cargo.toml
crates/text-search/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: colors.rs  lib.rs  loader.rs
crates/theme/themes/: default.toml  material-lighter.toml  midnight.toml  solarized-dark.toml  solarized-light.toml
crates/ui/: Cargo.toml
crates/ui-render/: Cargo.toml
crates/ui-render/src/: dropdown.rs  lib.rs  menu.rs  panel_rendering.rs  status_bar.rs
crates/ui/src/: config.rs  lib.rs  path_utils.rs  system_monitor.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
doc/en/: README.md  architecture.md  developer-guide.md  editor.md  file-manager.md  installation.md  terminal.md  themes.md  ui.md
doc/ru/: README.md  architecture.md  developer-guide.md  editor.md  file-manager.md  installation.md  terminal.md  themes.md  ui.md
help/: de.txt  en.txt  es.txt  fr.txt  hi.txt  pt.txt  ru.txt  th.txt  zh.txt
i18n/: de.toml  en.toml  es.toml  fr.toml  hi.toml  pt.toml  ru.toml  th.toml  zh.toml
packaging/: README.md
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/homebrew/: termide.rb
scripts/: test-packages.sh
src/: clipboard.rs  config.rs  constants.rs  event.rs  fs_watcher.rs  git.rs  keyboard.rs  layout_manager.rs  logger.rs  main.rs  path_utils.rs  rename_pattern.rs  session.rs  state.rs  syntax_highlighter.rs  system_monitor.rs  theme.rs  ui.rs  xdg_dirs.rs
src/app/: key_handler.rs  mod.rs  modal_handler.rs  mouse_handler.rs  panel_manager.rs
src/app/modal/: batch_handler.rs  confirm_handler.rs  input_handler.rs  mod.rs  select_handler.rs
src/editor/: buffer.rs  cursor.rs  highlighting.rs  history.rs  mod.rs  search.rs  viewport.rs  wrap.rs
src/git/: diff.rs  watcher.rs
src/i18n/: de.rs  en.rs  es.rs  fr.rs  hi.rs  loader.rs  mod.rs  pt.rs  ru.rs  runtime.rs  th.rs  zh.rs
src/panels/: debug.rs  editor.rs  mod.rs  panel_ext.rs  panel_group.rs  terminal_pty.rs  welcome.rs
src/panels/editor/: clipboard.rs  core.rs  git.rs  keyboard.rs  mod.rs  search.rs  selection.rs  text_editing.rs  word_wrap.rs
src/panels/file_manager/: file_info.rs  mod.rs  navigation.rs  operations.rs  rendering.rs  selection.rs  utils.rs
src/panels/log_viewer/: highlighting.rs  mod.rs
src/panels/terminal/: mod.rs  vt100_parser.rs
src/ui/: dropdown.rs  layout.rs  menu.rs  mod.rs  panel_helpers.rs  panel_rendering.rs  status_bar.rs  utils.rs
src/ui/modal/: info.rs  (+11 more)
themes/: atom-one-light.toml  ayu-light.toml  bluesky.toml  default.toml  dracula.toml  github-light.toml  light.toml  midnight.toml  monokai.toml  nord.toml  onedark.toml
(+25 files in other folders)
