[package]
name = "termide"
version = "0.1.0"
edition = "2021"
authors = ["Nick Nizovtsev"]
description = "Cross-platform terminal IDE, file manager and virtual terminal"
repository = "https://github.com/termide/termide"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "ide", "file-manager", "tui", "terminal-ui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
crossterm = "0.28"
dirs = "5.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
portable-pty = "0.8"
ratatui = "0.29.0"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-segmentation = "1.11"
unicode-width = "0.2.0"
vte = "0.13"

# Tree-sitter syntax highlight
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"

# Grammar parsers (statically linked)
# Programming languages
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"

# Web technologies
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.23"

# Configuration formats
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"

[build-dependencies]
cc = "1.0"
