[package]
name = "termide"
version = "0.2.0"
edition = "2021"
authors = ["Nick Nizovtsev"]
description = "Cross-platform terminal IDE, file manager and virtual terminal"
repository = "https://github.com/termide/termide"
license = "MIT"
keywords = ["terminal", "ide", "file-manager", "tui", "terminal-ui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".github/",
    "assets/screenshots/",
    "doc/",
    ".gitignore",
    ".pre-commit-config.yaml",
    "flake.nix",
    "flake.lock"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.deb]
maintainer = "Nick Nizovtsev <nizovtsevnv@gmail.com>"
copyright = "2025, Nick Nizovtsev <nizovtsevnv@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
TermIDE is a cross-platform terminal-based IDE, file manager, and virtual terminal \
written in Rust. It features syntax highlighting for 17+ languages, Git integration, \
multi-panel accordion layout with smart stacking, and an integrated virtual terminal \
with full PTY support."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["README.md", "usr/share/doc/termide/", "644"],
    ["LICENSE", "usr/share/doc/termide/", "644"],
    ["help/en.txt", "usr/share/termide/help/", "644"],
    ["help/ru.txt", "usr/share/termide/help/", "644"],
]

[package.metadata.generate-rpm]
name = "termide"
license = "MIT"
summary = "Cross-platform terminal IDE, file manager and virtual terminal"
assets = [
    { source = "README.md", dest = "/usr/share/doc/termide/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/termide/LICENSE", mode = "644", doc = true },
    { source = "help/en.txt", dest = "/usr/share/termide/help/en.txt", mode = "644" },
    { source = "help/ru.txt", dest = "/usr/share/termide/help/ru.txt", mode = "644" },
]
auto-req = "no"

[package.metadata.generate-rpm.requires]

[dependencies]
anyhow = "1.0"
arboard = "3.4"
base64 = "0.22"
chrono = "0.4"
crossterm = "0.28"
dirs = "5.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"
portable-pty = "0.8"
ratatui = "0.29.0"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.31"
toml = "0.8"
unicode-segmentation = "1.11"
unicode-width = "0.2.0"
vte = "0.13"

# Tree-sitter syntax highlight
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"

# Grammar parsers (statically linked)
# Programming languages
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-haskell = "0.23"
tree-sitter-nix = "0.3"

# Web technologies
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.23"

# Configuration formats
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"
regex = "1.12.2"
similar = "2.7.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.12"
