[package]
name = "termide-app-panel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Panel factory and lifecycle management for termide"

[dependencies]
anyhow.workspace = true

# Foundation crates
termide-app-core = { path = "../app-core" }

[dev-dependencies]
