[package]
name = "termide-app-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Background task coordination and message polling for termide"

[dependencies]
anyhow.workspace = true

# Foundation crates
termide-app-core = { path = "../app-core" }

[dev-dependencies]
