[package]
name = "termide-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for termide"

[dependencies]
serde.workspace = true
anyhow.workspace = true
toml = "0.8"
dirs = "6.0"
