[package]
name = "termide-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Session persistence for termide"

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
chrono.workspace = true
dirs.workspace = true
