[package]
name = "termide-theme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Theme system for termide"

[dependencies]
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
